Fix gap, change wording

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -51,4 +51,8 @@ h1 {
     flex-direction: column;
     align-items: flex-start;
   }
+
+  .button-row {
+    gap: 10px;
+  }
 }
